@@ -6,6 +6,7 @@ Change Log:
 ----------------------------------------------------------------------
 
 3.0.8 ( 2017-xx-xx )
+- Added bulk sidebars edit.
 
 3.0.7.1 ( 2017-05-25 )
 - Fixed visibility of Custom Explain - now it is visible only for administrators.
